61-66애니메이션

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Assets/8.Anim_AfterFix/S\#2-50_67/Final/2-61~66-1.anim
